Fix style of mixer when number of tracks cause horizontal scroll. Fix auto vertical scroll in piano roll

--- a/app/styles/mixer.scss
+++ b/app/styles/mixer.scss
@@ -146,6 +146,10 @@
   .output-section .track-toggles,
   .output-section .output-button-row {
     flex: 0 0 40px;
+
+    .btn {
+      padding: 6px 10px;
+    }
   }
 
   .output-section .knob {
